<resources>
    <string name="app_name">Theaters</string>
    <string name="imageRow">Marker</string>
    <string name="add">Add to DB</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_db_detail">DbDetailActivity</string>
    <string name="create">Add a new theater</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="update_activity">UpdateActivity</string>
    <string name="updateTheater">Update theater data</string>

</resources>
