<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/updateTheater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="30sp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="6dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/address"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/description"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:text="@string/lon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/longitude"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:text="@string/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="6dp"
                android:paddingTop="6dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/latitude"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:text="@string/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSubmit"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/btnCancel"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="24sp"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>